# Prog2_NHF

./: .gitignore  BUILDING.md  CMakeLists.txt  ClassHierarchy.mdj  Doxyfile  NHF.sln  NHF3_RESPONSE.md  README.md  Response.md  buildrun.sh
NHF/: Angle.cpp  Angle.hpp  App.cpp  App.hpp  AppData.cpp  AppData.hpp  AssetManager.cpp  AssetManager.hpp  Button.cpp  Button.hpp  ButtonState.hpp  Engine.cpp  Engine.hpp  GameMenu.cpp  GameMenu.hpp  GameStage.cpp  GameStage.hpp  InitMenu.cpp  InitMenu.hpp  MainMenu.cpp  MainMenu.hpp  Math.hpp  Menu.cpp  Menu.hpp  MenuItem.hpp  MenuManager.cpp  MenuManager.hpp  MenuNode.cpp  MenuNode.hpp  MenuStage.cpp  MenuStage.hpp  MenuStore.cpp  NHF.vcxproj  NHF.vcxproj.filters  Platform.cpp  Platform.hpp  PlatformContainer.cpp  PolarVector.hpp  PreCalculator.cpp  PreCalculator.hpp  (+20 more)
NHF/Config/: contexts.ini
NHF/Source/: Angle.hpp  App.cpp  App.hpp  AppData.cpp  AppData.hpp  BezierEasing.cpp  BezierEasing.hpp  ClassHierarchy.mdj  Controller.cpp  Controller.hpp  GameMenu.cpp  GameMenu.hpp  InitMenu.cpp  InitMenu.hpp  MainMenu.cpp  MainMenu.hpp  Math.cpp  Math.hpp  Menu.hpp  MenuBase.hpp  MenuItem.hpp  MenuNode.cpp  MenuNode.hpp  OptionsMenu.cpp  OptionsMenu.hpp  Platform.cpp  Platform.hpp  PlatformContainer.cpp  PlatformContainer.hpp  Player.cpp  Player.hpp  PolarVector.cpp  PreCalculator.cpp  PreCalculator.hpp  SFMLDrawable.hpp  SFMLEvent.hpp  SFMLKeyboard.hpp  SFMLMouse.hpp  SFMLRect.hpp  SFMLVector2.hpp  (+8 more)
NHF/Source/AppData/: AssetManager.cpp  AssetManager.hpp  ContextManager.cpp  ContextManager.hpp  Engine.hpp  InputManager.hpp  MenuManager.cpp  MenuManager.hpp  Window.cpp
NHF/Source/Controller/: MenuBase.hpp  MenuNode.hpp  PreView.cpp  PreView.hpp
NHF/Source/Core/: AppData.cpp  AppData.hpp  Controller.cpp  Controller.hpp  Window.cpp  Window.hpp
NHF/Source/Core/AppData/: AssetManager.cpp  AssetManager.hpp  Context.cpp  Context.hpp  ContextManager.cpp  ContextManager.hpp  ContextRepr.hpp
NHF/Source/Core/Controller/: MenuBase.hpp  MenuNode.cpp  MenuNode.hpp  PreView.cpp  PreView.hpp
NHF/Source/GUI/: State.hpp  StateMachine.cpp  StateMachine.hpp  Theme.cpp  Theme.hpp  Widget.cpp  Widget.hpp
NHF/Source/GUI/Widgets/: Bar.cpp  Bar.hpp  Button.cpp  Button.hpp  InputField.cpp  InputField.hpp  Text.cpp  Text.hpp  Widget.hpp
NHF/Source/GUI/Widgets/Button/: Button.cpp  Button.hpp  ButtonSM_Builder.cpp  ButtonSM_Builder.hpp  ButtonState.cpp  ButtonState.hpp
NHF/Source/GUI/Widgets/Text/: Text.cpp  Text.hpp
NHF/Source/Menus/: GameMenu.cpp  GameMenu.hpp  InitMenu.cpp  InitMenu.hpp  MainMenu.cpp  MainMenu.hpp  Menu.cpp  Menu.hpp  MenuItem.cpp  MenuItem.hpp  MenuNode.cpp  MenuNode.hpp  OptionsMenu.cpp  OptionsMenu.hpp
NHF/Source/Menus/GameMenu/: GameMenu.hpp  PauseScreen.cpp  PauseScreen.hpp  Physics.cpp  Physics.hpp  Platform.cpp  Platform.hpp  PlatformContainer.cpp  PlatformContainer.hpp  Player.cpp  Player.hpp  PreCalculator.cpp  PreCalculator.hpp  Screen.cpp  Screen.hpp  Track.cpp  Track.hpp
NHF/Source/Menus/InitMenu/: InitMenu.cpp  InitMenu.hpp
NHF/Source/Menus/MainMenu/: MainMenu.cpp  MainMenu.hpp
NHF/Source/Menus/OptionsMenu/: OptionsMenu.cpp  OptionsMenu.hpp
NHF/Source/Utilities/: Math.cpp  Math.hpp
NHF/Source/Utilities/Math/: Angle.cpp  Angle.hpp  BezierEasing.cpp  BezierEasing.hpp  Math.hpp  PolarVector.hpp  Transitionable.hpp  Transitions.cpp  Transitions.hpp
NHF/Source/Utilities/STL/: string.cpp  string.hpp  vector.hpp
NHF/Tests/: gtest_lite.h  memtrace.cpp  memtrace.h  test_main.cpp
